# Crucible

./: README.md
crucible/: Cargo.toml
crucible/examples/: dome_check.rs
crucible/src/: cell.rs  entity.rs  grid.rs  lib.rs  main.rs  renderer.rs  rules.rs  scenario.rs  scheduler.rs
