[package]
name = "crucible"
version = "0.1.0"
edition = "2024"

[lib]
name = "crucible"
path = "src/lib.rs"

[[bin]]
name = "crucible"
path = "src/main.rs"

[[bin]]
name = "sandbox"
path = "src/bin/sandbox.rs"

[dependencies]
ordered-float = "3"
eframe = { version = "0.29", features = ["wgpu"] }
egui = "0.29"
